[package]
name = "curlall"
version = "0.1.0"
authors = ["Robin Stocker"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/robinst/curlall"
description = "Simple curl-like CLI tool to automatically page through APIs."
keywords = ["client", "http", "request"]

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde_json = "1.0"
structopt = "0.3"

[dev-dependencies]
hyper = "0.13"
